first draft define category

--- a/ManejoGastosMensuales/app/src/main/AndroidManifest.xml
+++ b/ManejoGastosMensuales/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.CategoryDetailedActivity"></activity>
+        <activity android:name=".Activities.CategoryDetailedActivity" />
+        <activity
+            android:name=".Activities.DefineCategoriesActivity"
+            android:label="@string/title_activity_define_categories"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
