--- a/ManejoGastosMensuales/app/build.gradle
+++ b/ManejoGastosMensuales/app/build.gradle
@@ -31,5 +31,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+
+    //stetho
+    compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.uphyca:stetho_realm:2.0.0'
     testCompile 'junit:junit:4.12'
 }
