--- a/ManejoGastosMensuales/build.gradle
+++ b/ManejoGastosMensuales/build.gradle
@@ -15,6 +15,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        //stetho
+        maven {
+            url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+        }
     }
 }
 
