update a strings y cambio de nombre de app

--- a/ManejoGastosMensuales/app/src/main/AndroidManifest.xml
+++ b/ManejoGastosMensuales/app/src/main/AndroidManifest.xml
@@ -7,21 +7,20 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:debuggable="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity">
+        <activity android:name=".Activities.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.CategoryDetailedActivity" />
+        <activity android:name=".Activities.CategoryDetailedActivity" android:screenOrientation="portrait"/>
         <activity
             android:name=".Activities.DefineCategoriesActivity"
             android:label="@string/title_activity_define_categories"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
