--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,25 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath "io.realm:realm-gradle-plugin:3.1.2"
+        classpath 'io.realm:realm-gradle-plugin:5.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.0.1'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
         //stetho
         maven {
             url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
