--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,8 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.uphyca:stetho_realm:2.1.0'
     implementation 'com.github.QuadFlask:colorpicker:0.0.13'
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-ads:15.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
